syntax = "proto3";

package posWithHeightPackage;

message PosMessage {
    double longitude = 1;
    double latitude = 2;
    optional double height = 3;
    optional string update = 4;
    optional double res = 5;
    optional TerrainTypes type = 6;
}

enum TerrainTypes {
    UNKNOWN = 0; 
    DSM = 1;
    DTM = 2;
}

message PosWithHeightResponse {
    repeated PosMessage data = 1;
}

message PosRequest {
    repeated PosMessage positions = 1;
}

service getHeightsService {
    rpc Points(PosRequest) returns (PosWithHeightResponse) {};
}
